deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rentalservice
    version: "1.0"
  name: rentalservice
  namespace: rbac-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rentalservice
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rentalservice
    spec:
      containers:
        - name: rentalservice
          image: charroux/rentalservice:1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rentalservice
  name: rentalservice
  namespace: rbac-test
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: rentalservice
  type: LoadBalancer
status:
  loadBalancer: {}

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microservice-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"


---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: carservice
spec:
  hosts:
    - "*"
  gateways:
    - microservice-gateway
  http:
    - match:
        - uri:
            prefix: /rentalservice/
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 80
            host: rentalservice.default.svc.cluster.local
